unpackaged/main/default/objects/Tech_Team_Request__c/Tech_Team_Request__c.object-meta.xml
<CustomObject>
    <label>Tech Team Request</label>
    <nameField>
        <displayFormat>TTR-{000000000}</displayFormat>
        <label>Tech Team Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tech Team Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>