unpackaged/main/default/objects/Tech_Team_Request__c/fields/pro_Tech_Team_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>pro_Tech_Team_Closed_Date__c</fullName>
    <label>Closed Date</label>
    <type>DateTime</type>
</CustomField>