unpackaged/main/default/objects/Tech_Team_Request__c/fields/pro_Tech_Team_Comments__c.field-meta.xml
<CustomField>
    <fullName>pro_Tech_Team_Comments__c</fullName>
    <description>AB - 16/06/2023 - prodigy</description>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>