unpackaged/main/default/objects/Tech_Team_Request__c/fields/pro_Tech_Team_Inventory__c.field-meta.xml
<CustomField>
    <fullName>pro_Tech_Team_Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory</label>
    <referenceTo>inscor__Inventory_Line__c</referenceTo>
    <relationshipLabel>Tech Team Requests</relationshipLabel>
    <relationshipName>Tech_Team_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>