unpackaged/main/default/objects/Tech_Team_Request__c/fields/pro_Tech_Team_Priotity__c.field-meta.xml
<CustomField>
    <fullName>pro_Tech_Team_Priotity__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>