unpackaged/main/default/objects/Tech_Team_Request__c/fields/pro_Tech_Team_Required_Date__c.field-meta.xml
<CustomField>
    <fullName>pro_Tech_Team_Required_Date__c</fullName>
    <label>Required Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>