unpackaged/main/default/objects/Tech_Team_Request__c/fields/pro_Tech_Team_Sales_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>pro_Tech_Team_Sales_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order Line</label>
    <referenceTo>inscor__Sales_Order_Line__c</referenceTo>
    <relationshipLabel>Tech Team Requests</relationshipLabel>
    <relationshipName>Tech_Team_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>