unpackaged/main/default/objects/Tech_Team_Request__c/fields/pro_Tech_Team_Subject__c.field-meta.xml
<CustomField>
    <fullName>pro_Tech_Team_Subject__c</fullName>
    <description>AB - 16/06/2023 - prodigy</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>