unpackaged/main/default/objects/Tech_Team_Request__c/fields/pro_Tech_Team_User__c.field-meta.xml
<CustomField>
    <fullName>pro_Tech_Team_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tech_Team_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>