unpackaged/main/default/objects/Tech_Team_Request__c/fields/pro_TechTeam_Asset_Acquisition__c.field-meta.xml
<CustomField>
    <fullName>pro_TechTeam_Asset_Acquisition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Acquisition</label>
    <referenceTo>Asset_Acquisition__c</referenceTo>
    <relationshipLabel>Tech Team Requests</relationshipLabel>
    <relationshipName>Tech_Team_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>