unpackaged/main/default/objects/Tech_Team_Request__c/recordTypes/pro_General_Query.recordType-meta.xml
<RecordType>
    <fullName>pro_General_Query</fullName>
    <active>false</active>
    <label>General Query</label>
</RecordType>