unpackaged/main/default/objects/Tech_Team_Request__c/recordTypes/pro_Sales_Query.recordType-meta.xml
<RecordType>
    <fullName>pro_Sales_Query</fullName>
    <active>false</active>
    <label>Sales Query</label>
</RecordType>