unpackaged/main/default/objects/Tech_Team_Request__c/recordTypes/pro_Tech_Team_Asset.recordType-meta.xml
<RecordType>
    <fullName>pro_Tech_Team_Asset</fullName>
    <active>true</active>
    <label>Asset</label>
</RecordType>