unpackaged/main/default/objects/Tech_Team_Request__c/recordTypes/pro_Tech_Team_Inventory.recordType-meta.xml
<RecordType>
    <fullName>pro_Tech_Team_Inventory</fullName>
    <active>false</active>
    <label>Inventory</label>
</RecordType>