unpackaged/main/default/objects/Tech_Team_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>pro_Tech_Team_Priotity__c</columns>
    <columns>pro_Tech_Team_Status__c</columns>
    <columns>pro_Tech_Team_Subject__c</columns>
    <columns>pro_Tech_Team_Comments__c</columns>
    <columns>pro_Tech_Team_Closed_Date__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>