unpackaged/main/default/objects/Tech_Team_Request__c/listViews/pro_All_New_Tech_Requests.listView-meta.xml
<ListView>
    <fullName>pro_All_New_Tech_Requests</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>pro_Tech_Team_Priotity__c</columns>
    <columns>pro_Tech_Team_Status__c</columns>
    <columns>pro_Tech_Team_Subject__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pro_Tech_Team_Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>All New Tech Requests</label>
</ListView>